# hotelbooksystem

./: .gitignore  Pipfile  README.md  README.zh-hans.md  init_data.json  insertdata.py  manage.py  migrate.sh  pyproject.toml
backend/: admin.py  models.py  views.py
backend/migrations/: 0001_initial.py  0002_auto_20180530_2242.py  0003_auto_20180602_2338.py  0004_hotel_order_backgroud.py  0005_auto_20180603_0002.py  0006_hotel_overview.py  0007_roomtype_image.py
backend/templates/: about.html  base.html  done_order.html  index.html  order.html  roominfo.html
backend/viewspackage/: aboutView.py  indexView.py  orderResultView.py  orderView.py  roomInfoView.py
booksystem/: asgi.py  local_settings_sample.py  settings.py  urls.py  wsgi.py
booksystem/settings/: base.py  debug.py  prod.py
fixtures/: init_hotel.json  romanload_dump.json  romanload_hotel.json
houses/: admin.py  models.py  views.py
houses/migrations/: 0001_initial.py  0002_alter_hotel_options_alter_poster_options_and_more.py
houses/templates/: base.html  roominfo.html
members/: models.py
members/migrations/: 0001_initial.py  0002_alter_customer_options.py
orders/: models.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_order_options.py
orders/templates/: order.html
qiniuyun/: admin.py  apps.py  backend.py  models.py  qiniustorage.py  qiniusync.py  storage_qiniu.py  utils.py  views.py
scripts/: check.sh  createdatabase.py  devtool.py  format.sh  insertdata.py
templates/: index.html
