[tool.poetry]
name = "booksystem"
version = "0.2.0"
description = ""
authors = ["Waket Zheng <waketzheng@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.4"
Pillow = "^10.3.0"
python-dotenv = "^1.0.1"
PyMySQL = {extras = ["cryptography"], version = "^1.1.0"}
gunicorn = "^22.0.0"

[tool.poetry.group.dev.dependencies]
fast-dev-cli = {extras = ["all"], version = "^0.6.6"}
django-debug-toolbar = "^4.3.0"

[tool.mypy]
ignore_missing_imports = true
warn_no_return = false
exclude = [
    "^fabfile\\.py$",  # TOML's double-quoted strings require escaping backslashes
    'two\.pyi$',  # but TOML's single-quoted strings do not
    '^\.venv',
]
[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
